[package]
name = "wasm-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
web-sys = "0.3.55"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'MediaStream',
  'AnalyserNode',
  'AudioContext',
  'MediaElementAudioSourceNode',
  'MediaStreamAudioSourceNode',
  'AudioBufferSourceNode',
  'AudioBuffer',
  'AudioBufferOptions'
]
